--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.1.5",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
+    "eslint": "^4.11.0",
     "mocha": "^2.4.5",
     "mocha-jenkins-reporter": "^0.1.9",
     "superagent": "^1.7.2",
